--- a/index.html
+++ b/index.html
@@ -403,7 +403,7 @@
                         <div class="icon d-flex align-items-center justify-content-center">
                             <span class="fas fa-mobile-alt"></span>
                         </div>
-                        <h3>Nomer Handphone</h3>
+                        <h3>Phone Number</h3>
                         <p><a href="https://wa.me/6285858113997">+62 858 581 139 97</a></p>
                     </div>
                 </div>
