menambahkan target blank

--- a/index.html
+++ b/index.html
@@ -394,7 +394,7 @@
                             <span class="fab fa-github"></span>
                         </div>
                         <h3>Github Account</h3>
-                        <p><a href="https://github.com/ulfanuroktaviana575">ulfanuroktaviana575</a></p>
+                        <p><a href="https://github.com/ulfanuroktaviana575" target="_blank">ulfanuroktaviana575</a></p>
                     </div>
                 </div>
 
@@ -404,7 +404,7 @@
                             <span class="fas fa-mobile-alt"></span>
                         </div>
                         <h3>Phone Number</h3>
-                        <p><a href="https://wa.me/6285858113997">+62 858 581 139 97</a></p>
+                        <p><a href="https://wa.me/6285858113997" target="_blank">+62 858 581 139 97</a></p>
                     </div>
                 </div>
                 <div class="col-md-3 d-flex">
@@ -413,7 +413,8 @@
                             <span class=" fab fa-instagram "></span>
                         </div>
                         <h3>Instagram</h3>
-                        <p><a href="https://www.instagram.com/ulfahnur_oktaviana/">ulfahnur_oktaviana</a> </p>
+                        <p><a href="https://www.instagram.com/ulfahnur_oktaviana/"
+                                target="_blank">ulfahnur_oktaviana</a> </p>
                     </div>
                 </div>
                 <div class="col-md-3 d-flex">
@@ -422,8 +423,8 @@
                             <span class="fas fa-envelope-square"></span>
                         </div>
                         <h3>Email</h3>
-                        <p><a
-                                href="mailto:ulfanuroktaviana575@webmail.umm.ac.id">ulfanuroktaviana575@webmail.umm.ac.id</a>
+                        <p><a href="mailto:ulfanuroktaviana575@webmail.umm.ac.id"
+                                target="_blank">ulfanuroktaviana575@webmail.umm.ac.id</a>
                         </p>
                     </div>
                 </div>
