--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
                     </button>
                 </div>
                 <div class="modal-body">
-                    <img src="img/portfolio 6.jpg" style="width: 100%;" class="img-fluid" alt="Responsive image">
+                    <img src="img/portfolio 6.JPG" style="width: 100%;" class="img-fluid" alt="Responsive image">
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
